# pomo

./: Cargo.toml  README.md  Trunk.toml  index.html  pomo-82f939cc9821607b.js  pomodoro-38ebb0bafab48619.js  pomodoro-38ebb0bafab48619_bg.wasm  pomodoro-9250971f059f742a.js  pomodoro-fa0b54e39e8aad2b_bg.wasm  pomodoro.js  pomodoro_bg.wasm
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
