[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dioxus = { version = "0.2.4", features = ["web", "ssr"] }
instant = { version = "0.1.12", features = ["stdweb", "wasm-bindgen", "now"] }
wasm-bindgen = "0.2.82"
