[package]
name = "pomodoro"
version = "1.0.0"
edition = "2021"
authors = ["lectro.moe <contact@lectro.moe>"]

[dependencies]
async-std = "1.12.0"
wasm-bindgen = "0.2.82"
dioxus-helmet = "0.2.3"
dioxus = { version = "0.2.4", features = ["web", "ssr"] }
instant = { version = "0.1.12", features = ["stdweb", "wasm-bindgen", "now"] }
web-sys = { version = "0.3.59", features = ["HtmlAudioElement"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
