[package]
name = "pomodoro-tauri"
version = "0.1.0"
description = "Simple Pomo Timer"
authors = ["lectromoe contact@lectro.moe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
